# odrive-bazel

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  bazel-bazel-odrive  bazel-bin  bazel-out  bazel-testlogs  test.cc
bindings/: BUILD.bazel  lowlevelapi_py.cc
env/: pyvenv.cfg
logs/: .gitignore  BUILD.bazel
odrive-api/: BUILD.bazel  containers.h
odrive-api-bindings/: BUILD.bazel  odrive_api_py.cc  odrive_driver_py.cc
odrive-api/communication/: BUILD
odrive-api/interface/: BUILD.bazel  odrive_driver.h  odrive_socket_driver.h
odrive-api/logger/: BUILD.bazel  logger.h
odrive-api/utils/: BUILD
odrive_bindings/: BUILD.bazel  odrive_control_api_py.cc
patches/spdlog/: build_dot_bazel.patch  module_dot_bazel.patch
src/: BUILD  example.cc  main.cc  main.py
src/communication/: BUILD  odrive_socket.h
src/controller/: BUILD  low_level_controller.cc  low_level_controller.h  low_level_types.h
src/odrive_socket/: odrive_socket.h
src/utils/: BUILD  estop.h  motor_controller.h  odrive_socket.h
tests/: BUILD  BUILD.bazel  main.cc  main.py  main_py.py  read.py
