"""
    Bazel module ODrive Control via CAN.
"""

module(
    name = "odrive_control",
)

bazel_dep(name = "spdlog")
git_override(
    module_name = "spdlog",
    remote = "https://github.com/gabime/spdlog.git",
    commit = "51a0deca2c825f1d4461655a18bb37d6df76646d",
    patches = ["patches/spdlog/module_dot_bazel.patch", "patches/spdlog/build_dot_bazel.patch"],
)

# Autocomplete for Bazel:
# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
