"""
    Bazel module ODrive Control via CAN.
"""

module(
    name = "odrive_control",
)

# Python Rules:
bazel_dep(name = "rules_python", version = "1.0.0")

# Pybind11:
bazel_dep(name = "pybind11_bazel", version = "2.13.6")

# Python Toolchain:
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)

bazel_dep(name = "spdlog")
git_override(
    module_name = "spdlog",
    remote = "https://github.com/gabime/spdlog.git",
    commit = "51a0deca2c825f1d4461655a18bb37d6df76646d",
    patches = ["patches/spdlog/module_dot_bazel.patch", "patches/spdlog/build_dot_bazel.patch"],
)

# Autocomplete for Bazel:
# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7"
)
