load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")

pybind_library(
    name = "odrive_control_api_cc_library",
    srcs = ["odrive_control_api_py.cc"],
    deps = [
        "//src/controller:low_level_controller",
        "//src/controller:low_level_types",
        "//src/communication:odrive_socket",
    ],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

pybind_extension(
    name = "odrive_control_api",
    deps = [":odrive_control_api_cc_library"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "odrive_control_api_library",
    data = [":odrive_control_api"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

py_package(
    name = "odrive_control_api_pkg",
    deps = [":odrive_control_api_library"],
)

exports_files(
    ["description.md"],
    visibility = ["//visibility:public"],
)

py_wheel(
    name = "odrive_api",
    twine = "@publish_deps//twine",
    distribution = "odrive_api",
    summary = "Custom python bindings for the Odrive motor controllers.",
    description_file = ":description.md",
    python_requires = ">=3.10",
    python_tag = "py3",
    version = "0.0.1",
    deps = [
        ":odrive_control_api_pkg",
    ],
)
