load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "logger",
    srcs = ["logger.h"],
    deps = [
        "//odrive-api:containers",
        "//odrive-api/communication:odrive_socket",
        "//odrive-api/utils:estop",
        "@spdlog//:spdlog",
    ],
    visibility = ["//visibility:public"],
)
